unpackaged/main/default/objects/BoxAuthenticationSettings__c/BoxAuthenticationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Box Authentication Settings</label>
</CustomObject>