unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/Box_Subject_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Subject_Id__c</fullName>
    <label>Box Subject Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>