unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/Classification_ITAR__c.field-meta.xml
<CustomField>
    <fullName>Classification_ITAR__c</fullName>
    <label>Classification ITAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>