unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/Classification_NonITAR__c.field-meta.xml
<CustomField>
    <fullName>Classification_NonITAR__c</fullName>
    <label>Classification NonITAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>