unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <label>clientId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>