unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <label>clientSecret</label>
    <length>40</length>
    <type>Text</type>
</CustomField>