unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/Collaboration_Group__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Group__c</fullName>
    <description>The Salesforce_Box_User box group ID</description>
    <label>Collaboration Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>