unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/Collaboration_ITAR_Group__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_ITAR_Group__c</fullName>
    <label>Collaboration ITAR Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>