unpackaged/main/default/objects/BoxAuthenticationSettings__c/fields/enterpriseId__c.field-meta.xml
<CustomField>
    <fullName>enterpriseId__c</fullName>
    <label>enterpriseId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>